# Assignment2-Group2

./: .gitignore  CMakeLists.txt  LoadVector.cpp  README.md  SparseMatrixCSR.cpp  SparseMatrixCSR.hpp  assemble_system.hpp  cmake-tests.yaml  coo_to_csr.hpp  element_stiffness.cpp  element_stiffness.hpp  element_stiffness_test.cpp  elementstiffness_main.cpp  install.sh  mesh_reader_kokkos.hpp  mesh_reader_test.cpp  test_assembly.cpp  test_element_stiffness.cpp  test_load_vector.cpp  test_mesh_reader.cpp  test_read_mesh_integration.cpp  test_sparse_matrix.cpp  user_instructions.md
.github/workflows/: cmake-tests.yaml  main.yml
Assembly/: assemble_system.hpp  assemble_system_gpu.hpp  coo_to_csr.hpp  coo_to_csr_kokkos.hpp
CodeReviews/: bibek_review.md  kairvi_review.md  scott_review.md
Driver/: main.cpp
Element/: create_element_coordinates.cpp  create_element_coordinates.hpp  element_stiffness.cpp  elementstiffness_main.cpp
Global/: LoadVector.hpp  SparseMatrixCSR.cpp
ReadMesh/: mesh_reader_kokkos.cpp
Read_Mesh/: mesh_reader_kokkos.cpp
Testing/: test_assembly.cpp  test_assembly_gpu.cpp  test_element_stiffness.cpp  test_load_vector.cpp  test_main.cpp  test_mesh_reader.cpp  test_read_mesh_integration.cpp  test_sparse_matrix.cpp
